# IP-Project

./: main.py  pyproject.toml  requrement.txt
static/css/: flaticon.css
templates/: index.html
